[metadata]
name = dax
version = 0.0.1
url=https://pramari.de/,
author=Andreas.Neumeier,
author_email=andreas@neumeier.org,
description='...',
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = analytics
classifiers =
  Environment :: 
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  

[options]
packages = dax
python_requires = >=3.10
install_requires =
  pandas